--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <p> to make our vs files to store inside github we use <b>git init </b> - this will initialize a repo in our git hub from vs code itself </p>
-    <h1> HOLLA ! </h1>
+    <h1> HOLLA !(button) </h1>
+
 </body>
 </html>
